@@ -47,6 +47,7 @@ lib/rdoc/options.rb
 lib/rdoc/parser.rb
 lib/rdoc/parser/c.rb
 lib/rdoc/parser/f95.rb
+lib/rdoc/parser/perl.rb
 lib/rdoc/parser/ruby.rb
 lib/rdoc/parser/simple.rb
 lib/rdoc/rdoc.rb
@@ -73,6 +74,7 @@ test/test_rdoc_markup_to_html.rb
 test/test_rdoc_markup_to_html_crossref.rb
 test/test_rdoc_parser.rb
 test/test_rdoc_parser_c.rb
+test/test_rdoc_parser_perl.rb
 test/test_rdoc_parser_ruby.rb
 test/test_rdoc_ri_attribute_formatter.rb
 test/test_rdoc_ri_default_display.rb
